SimpleComplex/Utils 2.x, 2019-06-10
-----------------------------------
- Bootstrap error handler: CLI shan't die on PHP error having notice level.
- Release 2.1.

SimpleComplex/Utils 2.x, 2019-04-08
-----------------------------------
- Release 2.0.
- Removed obsolete classes TimeFreezable, TimeLocalFreezable.
- Updated release 2.0.

SimpleComplex/Utils 2.x, 2019-04-04
-----------------------------------
- Time is now freezable by itself, and classes TimeFreezable, TimeLocalFreezable
  are thus obsolete and deprecated.
- Time: removed deprecated methods
  offsetIsLocal, getDateISOlocal, getTimeISOlocal, getDateTimeISOlocal.

SimpleComplex/Utils 1.x, 2019-03-23
-----------------------------------
- Utils::getRequestHeader() is now case-sensitive fixing case inconsistencies
  in actual header names; 'content-length' gets listed as 'Content-Length'.
  And fixed clumsy and probably wrong non-Apache algo, in same method.
- Release 1.14.

SimpleComplex/Utils 1.x, 2019-02-03
-----------------------------------
- Release 1.13.

SimpleComplex/Utils 1.x, 2019-02-02
-----------------------------------
- Time::diffConstant() must fix that native diff()|\DateInterval calculation
  doesn't work correctly with other timezone than UTC
  (https://bugs.php.net/bug.php?id=52480).
- Release 1.12.
- Serious Time bug: using offset to compare timezone is an absolute no-go
  due to daylight saving time.
  All timezone comparisions now use timezone name, and the comparisons are only
  forgiving in the sense that UTC and Z are considered the same.
  Removed Time instance var timezoneOffsetIsLocal
  and class var $timezoneLocalOffset.
  Removed Time::getTimezoneLocalInternal() $offset parameter.
  Time::getTimezoneLocalInternal() now returns clone, not the actual object.
  Time::checkTimezoneDefault() now checks name, not offset.
- Time::diffConstant() now throws exception if the two datetimes
  don't have comparable timezones and falsy (new) argument allowUnEqualTimezones.
